--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-#spring.datasource.url=jdbc:sqlserver://bbdinterns2025.database.windows.net;databaseName=interns2025;encrypt=true;trustServerCertificate=true
-#spring.datasource.username=listifyuser
-#spring.datasource.password=RZkVk6vqJZtp*UOhqvODT
-#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.platform=sqlserver
+spring.application.name=Listify
+server.port=8080
+spring.datasource.url=jdbc:sqlserver://bbdinterns2025.database.windows.net:1433;databaseName=interns2025
+spring.datasource.username=listifyuser
+spring.datasource.password=RZkVk6vqJZtp*UOhqvODT
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.sql.init.platform=sqlserver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
+
 
