Added naming conversion to properties

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -7,5 +7,7 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.sql.init.platform=sqlserver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 
 
