Did GET Methods for TaskDependencies

--- a/API/pom.xml
+++ b/API/pom.xml
@@ -89,6 +89,9 @@
 					<source>1.8</source>
 					<target>1.8</target>
 					<compilerArgument>-parameters</compilerArgument>
+					<compilerArgs>
+						<arg>-parameters</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
