--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -4,3 +4,21 @@
 #spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #spring.datasource.platform=sqlserver
 
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ListifyDB;encrypt=true;trustServerCertificate=true
+spring.datasource.username=userapi
+spring.datasource.password=RZkVk6vqJZtp*UOhqvODT
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.security.oauth2.client.registration.github.client-id=Ov23liy7IUPXiUMKzFFH
+spring.security.oauth2.client.registration.github.client-secret=0b4d6bae8bd4dff9cdfcaaef192f35e44242c42f
+spring.security.oauth2.client.registration.github.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.github.redirect-uri={baseUrl}/login/oauth2/code/github
+spring.security.oauth2.client.registration.github.client-name=GitHub
+
+spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
+spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
+spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.hbm2ddl.auto=none
