--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,13 +1,13 @@
-spring.application.name=Listify
-server.port=8080
-spring.datasource.url=jdbc:sqlserver://bbdinterns2025.database.windows.net:1433;databaseName=interns2025
-spring.datasource.username=listifyuser
+#spring.datasource.url=jdbc:sqlserver://bbdinterns2025.database.windows.net;databaseName=interns2025;encrypt=true;trustServerCertificate=true
+#spring.datasource.username=listifyuser
+#spring.datasource.password=RZkVk6vqJZtp*UOhqvODT
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.platform=sqlserver
+
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ListifyDB;encrypt=true;trustServerCertificate=true
+spring.datasource.username=userapi
 spring.datasource.password=RZkVk6vqJZtp*UOhqvODT
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.sql.init.platform=sqlserver
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
-
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.security.oauth2.client.registration.github.client-id=Ov23liy7IUPXiUMKzFFH
 spring.security.oauth2.client.registration.github.client-secret=0b4d6bae8bd4dff9cdfcaaef192f35e44242c42f
@@ -19,5 +19,6 @@ spring.security.oauth2.client.provider.github.authorization-uri=https://github.c
 spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
 spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
 
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.hbm2ddl.auto=none
