--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-#spring.datasource.url=jdbc:sqlserver://bbdinterns2025.database.windows.net;databaseName=interns2025;encrypt=true;trustServerCertificate=true
-#spring.datasource.username=listifyuser
-#spring.datasource.password=RZkVk6vqJZtp*UOhqvODT
-#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.platform=sqlserver
-
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ListifyDB;encrypt=true;trustServerCertificate=true
-spring.datasource.username=userapi
-spring.datasource.password=RZkVk6vqJZtp*UOhqvODT
+spring.datasource.url=jdbc:sqlserver://bbdinterns2025.database.windows.net;databaseName=interns2025;encrypt=true;trustServerCertificate=true
+spring.datasource.username=listifyuser
+spring.datasource.password=Lc5yMdK5CkSU8%otUPs2P
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.sql.init.platform=sqlserver
 
-spring.security.oauth2.client.registration.github.client-id=Ov23liy7IUPXiUMKzFFH
-spring.security.oauth2.client.registration.github.client-secret=0b4d6bae8bd4dff9cdfcaaef192f35e44242c42f
+#spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ListifyDB;encrypt=true;trustServerCertificate=true
+#spring.datasource.username=listifyuser
+#spring.datasource.password=Lc5yMdK5CkSU8%otUPs2P
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+spring.security.oauth2.client.registration.github.client-id=Ov23ctYsjVqetSDjgwMk
+spring.security.oauth2.client.registration.github.client-secret=7229be154580b705e9d8b54e7cbf3b25ae6d48fb
+spring.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
