--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -1,20 +1,19 @@
-@@ -1,21 +0,0 @@
+# Database Configuration
 spring.datasource.url=jdbc:sqlserver://{DB_SERVER};databaseName={DB_DATABASENAME};encrypt=true;trustServerCertificate=true
 spring.datasource.username={DB_USERNAME}
 spring.datasource.password={DB_PASSWORD}
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.platform=sqlserver
 
+# Security Authentication Setup (OAuth2 with GitHub)
 spring.security.oauth2.client.registration.github.client-id={CLIENT_ID}
 spring.security.oauth2.client.registration.github.client-secret={CLIENT_SECRET}
 spring.security.oauth2.client.registration.github.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.github.redirect-uri={baseUrl}/login/oauth2/code/github
 spring.security.oauth2.client.registration.github.client-name=GitHub
-
 spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
 spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
 spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
 
+# JPA and Hibernate Naming Strategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.hbm2ddl.auto=none
