Fixed nameing conventions

--- a/API/pom.xml
+++ b/API/pom.xml
@@ -45,7 +45,9 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+			<scope>provided</scope>  <!-- Or exclude it if you want to disable security altogether -->
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
