--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # Database Configuration
-spring.datasource.url=jdbc:sqlserver://${DB_SERVER};databaseName=${DB_DATABASENAME};encrypt=true;trustServerCertificate=true
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:sqlserver://bbdinterns2025.database.windows.net;databaseName=interns2025;encrypt=true;trustServerCertificate=true
+spring.datasource.username=listifyuser
+spring.datasource.password=Lc5yMdK5CkSU8%otUPs2P
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.platform=sqlserver
 
 # Security Authentication Setup (OAuth2 with GitHub)
-spring.security.oauth2.client.registration.github.client-id=${CLIENT_ID}
-spring.security.oauth2.client.registration.github.client-secret=${CLIENT_SECRET}
+spring.security.oauth2.client.registration.github.client-id=Ov23ctYsjVqetSDjgwMk
+spring.security.oauth2.client.registration.github.client-secret=7229be154580b705e9d8b54e7cbf3b25ae6d48fb
 spring.security.oauth2.client.registration.github.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.github.redirect-uri={baseUrl}/login/oauth2/code/github
 spring.security.oauth2.client.registration.github.client-name=GitHub
@@ -17,3 +17,5 @@ spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.c
 
 # JPA and Hibernate Naming Strategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+jwt.secret = 0b4d6bae8bd4dff9cdfcaaef192f35e44242c42f
