--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -18,3 +18,5 @@ accounts.google.com=https://accounts.google.com
 
 # JPA and Hibernate Naming Strategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+springdoc.swagger-ui.csrf.enabled=true
