--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.security.oauth2.client.registration.google.client-id=${CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
-redirect-uri=http://localhost:8050/loading
+redirect-uri=http://localhost:8080/oauth2/callback/google
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 google.jwt.public.keys.url=https://www.googleapis.com/oauth2/v3/certs
 accounts.google.com=https://accounts.google.com
@@ -19,4 +19,5 @@ accounts.google.com=https://accounts.google.com
 # JPA and Hibernate Naming Strategy
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+# Swagger setup
 springdoc.swagger-ui.csrf.enabled=true
